--- a/appdet.json
+++ b/appdet.json
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"Japan","country":"Japan","image":"germany","ip":"51.68.152.226 80","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"Japan","country":"Japan","image":"germany","ip":"public-vpn-119.opengw.net 443","active":"true","signal":"a"},
 
   ]
 }
