--- a/appdet.json
+++ b/appdet.json
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"Japan","country":"Japan","image":"japan","ip":"219.100.37.100 443","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"Japan","country":"Japan","image":"japan","ip":"219.100.37.100","active":"true","signal":"a"},
 
   ]
 }
