--- a/appdet.json
+++ b/appdet.json
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"United State","country":"United State","image":"japan","ip":"public-vpn-48.opengw.net","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"United State","country":"United State","image":"japan","ip":"219.100.37.12 1195","active":"true","signal":"a"},
 
   ]
 }
