--- a/appdet.json
+++ b/appdet.json
@@ -1,10 +1,10 @@
 {
   "ads":"true",
   "update":[{
-    "version":"2.8.1600",
+    "version":"1.0.0",
     "title":"This app is now Open Source",
-    "description":"The App is available at github.com/gayankuruppu/android-vpn-client-ics-openvpn",
-    "size":"https://git.io/JeY69"
+    "description":" ",
+    "size":" "
   }],
   "blocked":[
     {"id":0, "app":"com.android.game"},
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"United State","country":"United State","image":"japan","ip":"219.100.37.12 1195","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"United State","country":"United State","image":"japan","ip":"98.208.0.216 1230","active":"true","signal":"a"},
 
   ]
 }
