--- a/appdet.json
+++ b/appdet.json
@@ -18,7 +18,7 @@
   "free":[
 	{"id":0, "file":0, "city":"United State","country":"United State","image":"japan","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":1, "file":1, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
-	  
-
+	{"id":2, "file":1, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
+	{"id":3, "file":1, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
   ]
 }
