--- a/appdet.json
+++ b/appdet.json
@@ -24,7 +24,7 @@
 	{"id":5, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":6, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":7, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
-	{"id":8, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
+	{"id":8, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"219.100.37.62 443","active":"true","signal":"a"},
 
   ]
 }
