--- a/appdet.json
+++ b/appdet.json
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"United State","country":"United State","image":"russia","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"United State","country":"Russia","image":"russia","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":1, "file":1, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":2, "file":2, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":3, "file":3, "city":"United State","country":"United State","image":"unitedstates","ip":"public-vpn-190.opengw.net 1195","active":"true","signal":"a"},
