--- a/appdet.json
+++ b/appdet.json
@@ -2,7 +2,7 @@
   "ads":"true",
   "update":[{
     "version":"1.0.0",
-    "title":"This app is now Open Source",
+    "title":"BXvpn",
     "description":" ",
     "size":" "
   }],
@@ -16,7 +16,7 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-	{"id":0, "file":0, "city":"United State","country":"Russia","image":"russia","ip":"vpn396247784.opengw.net 1707","active":"true","signal":"a"},
+	{"id":0, "file":0, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn396247784.opengw.net 1707","active":"true","signal":"a"},
 	{"id":1, "file":1, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":2, "file":2, "city":"United State","country":"United State","image":"unitedstates","ip":"vpn157674668.opengw.net 443","active":"true","signal":"a"},
 	{"id":3, "file":3, "city":"United State","country":"Russia","image":"russia","ip":"public-vpn-190.opengw.net 1195","active":"true","signal":"a"},
